--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -5,9 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
-/* ==========================================================
-   إعدادات عامة للجسم والعناصر
-========================================================== */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -19,9 +17,7 @@ body {
   min-height:100vh;
 }
 
-/* ==========================================================
-   الشريط الجانبي (Sidebar)
-========================================================== */
+/* Sidebar */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
@@ -34,51 +30,22 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-
-.sidebar h2 { 
-  color:#1976d2; 
-  margin-bottom:20px; 
-  font-size:1.6rem; 
-  border-bottom:2px solid #1976d2; 
-  padding-bottom:5px; 
-}
-
-.sidebar a { 
-  display:block; 
-  color:#fff; 
-  text-decoration:none; 
-  margin:10px 0; 
-  transition: color 0.3s ease; 
-}
-
+.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
+.sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
+.sidebar button { width:100%; padding:10px; margin-top:20px; border:none; border-radius:6px; background:#0d47a1; color:#fff; cursor:pointer; font-weight:bold; }
 
-.sidebar button { 
-  width:100%; 
-  padding:10px; 
-  margin-top:20px; 
-  border:none; 
-  border-radius:6px; 
-  background:#0d47a1; 
-  color:#fff; 
-  cursor:pointer; 
-  font-weight:bold;
-}
-
-/* ==========================================================
-   المحتوى الرئيسي
-========================================================== */
+/* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
-/* ==========================================================
-   ترويسة الصفحة
-========================================================== */
+/* Header */
+header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
+header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
+header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
+header div p { font-size:1.2rem; color:#555; }
+
+/* Header styles */
 header {
-  display:flex;
-  align-items:center;
-  gap:30px;
-  margin-bottom:40px;
-  flex-wrap:wrap;
   padding:20px 30px;
   border-radius:15px;
   background: linear-gradient(135deg, #2196f3, #64b5f6);
@@ -86,31 +53,11 @@ header {
   box-shadow: 0 8px 25px rgba(0,0,0,0.2);
   border: 2px solid #1976d2;
 }
+header img { height:140px; border-radius:12px; border:3px solid #fff; box-shadow:0 4px 15px rgba(0,0,0,0.15);}
+header div h1 { font-size:2.8rem; color:#fff; margin-bottom:8px; text-shadow: 1px 1px 4px rgba(0,0,0,0.4);}
+header div p { font-size:1.3rem; color:#e0f7fa; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);}
 
-header img {
-  height:140px;
-  width:auto;
-  border-radius:12px;
-  border:3px solid #fff;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-}
-
-header div h1 {
-  font-size:2.8rem;
-  color:#fff;
-  margin-bottom:8px;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
-}
-
-header div p {
-  font-size:1.3rem;
-  color:#e0f7fa;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-}
-
-/* ==========================================================
-   استجابة الأجهزة الصغيرة
-========================================================== */
+/* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
@@ -121,25 +68,12 @@ header div p {
   header img { height:120px; }
 }
 
-/* ==========================================================
-   الأقسام والعناوين
-========================================================== */
+/* Sections */
 section { margin-bottom:50px; }
+section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
-section h2 { 
-  color: #1976d2; 
-  margin-bottom:20px; 
-  font-size:1.8rem; 
-  border-bottom: 2px solid #1976d2; 
-  display:inline-block; 
-  padding-bottom:4px; 
-}
-
-/* ==========================================================
-   الصناديق (Boxes) مع تأثيرات hover
-========================================================== */
+/* Boxes */
 .features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
-
 .box {
   background: linear-gradient(145deg, #e3f2fd, #bbdefb);
   padding:20px;
@@ -152,71 +86,33 @@ section h2 {
   align-items:center;
   position:relative;
 }
+.box:hover { transform: translateY(-6px); box-shadow:0 12px 30px rgba(0,0,0,0.2); background: linear-gradient(145deg, #bbdefb, #90caf9); }
 
-.box:hover { 
-  transform: translateY(-6px); 
-  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
-  background: linear-gradient(145deg, #bbdefb, #90caf9);
-}
-
-/* النصوص داخل الصندوق */
-.box h3 { 
-  color:#0d47a1; 
-  margin-bottom:10px; 
-  font-size:1.2rem; 
-  transition: color 0.3s ease; 
-  text-align:center; 
-
-  display: -webkit-box;       /* دعم تقليدي لقص النص */
-  -webkit-line-clamp: 2;      /* الحد الأقصى: سطرين */
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;     /* ... إذا تجاوز النص السطرين */
-  word-break: break-word;
-}
-
+.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; text-align:center;
+  display: -webkit-box; -webkit-line-clamp:2; -webkit-box-orient: vertical; overflow:hidden; text-overflow:ellipsis; word-break:break-word; }
 .box:hover h3 { color:#0b3d91; }
-
 .box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; text-align:center; }
-
 iframe { width:100%; height:200px; border-radius:12px; object-fit:cover; }
 
-/* ==========================================================
-   زر الحذف للفيديوهات (يظهر فقط للمسؤول)
-========================================================== */
-.deleteBtn {
-  position:absolute;
-  top:10px;
-  right:10px;
-  background:red;
-  color:#fff;
-  border:none;
-  border-radius:5px;
-  padding:5px 8px;
-  cursor:pointer;
-  display:none;
-}
-
-/* ==========================================================
-   Footer
-========================================================== */
+/* Footer */
 footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* ==========================================================
-   Form إضافة الفيديو الجديد
-========================================================== */
+/* Form */
 #videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
 #videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
 #videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
+/* زر الحذف */
+.deleteBtn { position:absolute; top:10px; right:10px; background:red; color:#fff; border:none; border-radius:5px; padding:5px 8px; cursor:pointer; display:none; }
+
+/* القسم الموسع لكل صندوق */
+.expandedSection { display:none; width:100%; margin-top:15px; }
 </style>
 </head>
 <body>
 
-<!-- ==========================================================
-   Sidebar
-========================================================== -->
+<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -227,7 +123,6 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#contact">Contact</a>
 
   <button id="showFormBtn">إضافة فيديو جديد</button>
-
   <div id="videoForm">
       <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
       <input type="text" id="videoURL" placeholder="رابط YouTube">
@@ -244,87 +139,63 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- ==========================================================
-   About Section
-========================================================== -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
 </section>
 
-<!-- ==========================================================
-   Lessons Section (الأقسام الرئيسية الثلاثة)
-========================================================== -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
+
     <!-- صندوق Everyday Conversations -->
     <div class="box">
       <h3>Everyday Conversations</h3>
       <p>Real phrases used daily</p>
-      <button class="readMoreBtn" data-target="expandedEveryday">Read More</button>
+      <button class="readMoreBtn">Read More</button>
+
+      <!-- القسم الموسع مخفي تحت الصندوق -->
+      <div class="expandedSection">
+        <div class="box"><h3>Sabah el-kheir</h3><p>Good morning</p></div>
+        <div class="box"><h3>Ezayak?</h3><p>How are you?</p></div>
+        <div class="box"><h3>Shokran</h3><p>Thank you</p></div>
+      </div>
     </div>
+
     <!-- صندوق Egyptian Pronunciation -->
     <div class="box">
       <h3>Egyptian Pronunciation</h3>
       <p>Learn pronunciation</p>
-      <button class="readMoreBtn" data-target="expandedPronunciation">Read More</button>
+      <button class="readMoreBtn">Read More</button>
+
+      <div class="expandedSection">
+        <div class="box"><h3>Sahtain</h3><p>Bon appétit</p></div>
+        <div class="box"><h3>Mashy</h3><p>OK</p></div>
+        <div class="box"><h3>Maalesh</h3><p>Never mind</p></div>
+      </div>
     </div>
+
     <!-- صندوق Speak with Confidence -->
     <div class="box">
       <h3>Speak with Confidence</h3>
       <p>Start speaking naturally</p>
-      <button class="readMoreBtn" data-target="expandedConfidence">Read More</button>
+      <button class="readMoreBtn">Read More</button>
+
+      <div class="expandedSection">
+        <div class="box"><h3>Ahlan</h3><p>Hello</p></div>
+        <div class="box"><h3>Forsa Saeeda</h3><p>Nice to meet you</p></div>
+        <div class="box"><h3>Shokran kteer</h3><p>Thanks a lot</p></div>
+      </div>
     </div>
+
   </div>
 </section>
 
-<!-- ==========================================================
-   الأقسام الموسعة لكل صندوق
-   عند الضغط على Read More، الزائر ينقل لهذا القسم
-========================================================== -->
-
-<!-- Everyday Conversations الموسع -->
-<section id="expandedEveryday" style="margin-bottom:50px;">
-  <h2>Everyday Conversations – موسع</h2>
-  <div class="features">
-    <div class="box"><h3>Sabah el-kheir</h3><p>Good morning</p></div>
-    <div class="box"><h3>Ezayak?</h3><p>How are you?</p></div>
-    <div class="box"><h3>Shokran</h3><p>Thank you</p></div>
-  </div>
-</section>
-
-<!-- Egyptian Pronunciation الموسع -->
-<section id="expandedPronunciation" style="margin-bottom:50px;">
-  <h2>Egyptian Pronunciation – موسع</h2>
-  <div class="features">
-    <div class="box"><h3>Sahtain</h3><p>Bon appétit</p></div>
-    <div class="box"><h3>Mashy</h3><p>OK</p></div>
-    <div class="box"><h3>Maalesh</h3><p>Never mind</p></div>
-  </div>
-</section>
-
-<!-- Speak with Confidence الموسع -->
-<section id="expandedConfidence" style="margin-bottom:50px;">
-  <h2>Speak with Confidence – موسع</h2>
-  <div class="features">
-    <div class="box"><h3>Ahlan</h3><p>Hello</p></div>
-    <div class="box"><h3>Forsa Saeeda</h3><p>Nice to meet you</p></div>
-    <div class="box"><h3>Shokran kteer</h3><p>Thanks a lot</p></div>
-  </div>
-</section>
-
-<!-- ==========================================================
-   Video Lessons
-========================================================== -->
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList"></div>
 </section>
 
-<!-- ==========================================================
-   Downloadable Resources
-========================================================== -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -341,40 +212,25 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- ==========================================================
-   Egyptian Arabic Section
-========================================================== -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
-  <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
-  <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
+  <p>Egyptian Arabic is widely understood. Learning it helps communicate with millions.</p>
 </section>
 
-<!-- ==========================================================
-   Contact Section
-========================================================== -->
 <section id="contact">
   <h2>Contact</h2>
-  <p>
-    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
-    Email: spokenarabicnow@gmail.com
+  <p>YouTube: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br>
+     Email: spokenarabicnow@gmail.com
   </p>
 </section>
 
-<!-- ==========================================================
-   Footer
-========================================================== -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- ==========================================================
-   JavaScript لإضافة الفيديوهات وRead More
-========================================================== -->
 <script>
 const PASSWORD = "1234";
 let isAdmin = false;
-
 const showFormBtn = document.getElementById('showFormBtn');
 const videoForm = document.getElementById('videoForm');
 const addVideoBtn = document.getElementById('addVideoBtn');
@@ -384,86 +240,71 @@ const videoList = document.getElementById('videoList');
 
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
 
-/* ==========================
-   إنشاء عناصر الفيديو وعرضها
-========================== */
-function createVideoElement(video) {
+function createVideoElement(video){
   const box = document.createElement('div');
   box.classList.add('box');
-  box.innerHTML = `
-    <h3>${video.title}</h3>
-    <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
-    <button class="deleteBtn">حذف الفيديو</button>
-  `;
+  box.innerHTML = `<h3>${video.title}</h3>
+                   <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
+                   <button class="deleteBtn">حذف الفيديو</button>`;
   const deleteBtn = box.querySelector('.deleteBtn');
-  if(isAdmin) deleteBtn.style.display = "block";
+  if(isAdmin) deleteBtn.style.display="block";
   deleteBtn.addEventListener('click', () => {
-    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+    if(confirm("هل أنت متأكد؟")){
       box.remove();
-      videos = videos.filter(v => v.id !== video.id);
-      localStorage.setItem('videos', JSON.stringify(videos));
+      videos = videos.filter(v=>v.id!==video.id);
+      localStorage.setItem('videos',JSON.stringify(videos));
     }
   });
   videoList.appendChild(box);
 }
 
-videos.forEach(v => createVideoElement(v));
+videos.forEach(v=>createVideoElement(v));
 
-/* ==========================
-   زر عرض نموذج إضافة الفيديو
-========================== */
-showFormBtn.addEventListener('click', () => {
+showFormBtn.addEventListener('click', ()=>{
   if(!isAdmin){
-    const pass = prompt("أدخل كلمة المرور:");
-    if(pass === PASSWORD){
-      videoForm.style.display = "flex";
-      isAdmin = true;
-      document.querySelectorAll('.deleteBtn').forEach(btn => btn.style.display = "block");
-    } else {
-      alert("كلمة المرور غير صحيحة!");
-    }
+    const pass=prompt("أدخل كلمة المرور:");
+    if(pass===PASSWORD){
+      videoForm.style.display="flex";
+      isAdmin=true;
+      document.querySelectorAll('.deleteBtn').forEach(btn=>btn.style.display="block");
+    }else alert("كلمة المرور غير صحيحة!");
   }
 });
 
-/* ==========================
-   إضافة فيديو جديد
-========================== */
-addVideoBtn.addEventListener('click', () => {
-  const title = videoTitleInput.value.trim();
-  const url = videoURLInput.value.trim();
-  if(!title || !url){ alert("يرجى إدخال عنوان الفيديو والرابط!"); return; }
-
-  let videoId = "";
-  if(url.includes("youtu.be/")) videoId = url.split("youtu.be/")[1].split("?")[0];
-  else if(url.includes("youtube.com/watch?v=")) videoId = url.split("v=")[1].split("&")[0];
-  else if(url.includes("youtube.com/shorts/")) videoId = url.split("shorts/")[1].split("?")[0];
-  else { alert("رابط YouTube غير صالح!"); return; }
-
-  const newVideo = { title, url, id: videoId };
+addVideoBtn.addEventListener('click', ()=>{
+  const title=videoTitleInput.value.trim();
+  const url=videoURLInput.value.trim();
+  if(!title||!url){alert("يرجى إدخال عنوان الفيديو والرابط!"); return;}
+  let videoId="";
+  if(url.includes("youtu.be/")) videoId=url.split("youtu.be/")[1].split("?")[0];
+  else if(url.includes("youtube.com/watch?v=")) videoId=url.split("v=")[1].split("&")[0];
+  else if(url.includes("youtube.com/shorts/")) videoId=url.split("shorts/")[1].split("?")[0];
+  else {alert("رابط YouTube غير صالح!"); return;}
+  const newVideo={title,url,id:videoId};
   videos.push(newVideo);
-  localStorage.setItem('videos', JSON.stringify(videos));
-
+  localStorage.setItem('videos',JSON.stringify(videos));
   createVideoElement(newVideo);
-
-  videoTitleInput.value = "";
-  videoURLInput.value = "";
+  videoTitleInput.value=""; videoURLInput.value="";
 });
 
-/* ==========================
-   أزرار Read More لكل صندوق
-   تنقل المستخدم إلى القسم الموسع الخاص بكل صندوق
-========================== */
-document.querySelectorAll('.readMoreBtn').forEach(btn => {
-  btn.addEventListener('click', () => {
-    const targetId = btn.getAttribute('data-target');
-    const section = document.getElementById(targetId);
-    section.scrollIntoView({behavior: 'smooth'});
+/* زر Read More لإظهار القسم الموسع أسفل الصندوق */
+document.querySelectorAll('.readMoreBtn').forEach(btn=>{
+  btn.addEventListener('click',()=>{
+    const expanded=btn.nextElementSibling;
+    if(expanded.style.display==="none" || expanded.style.display===""){
+      expanded.style.display="block";
+      btn.textContent="Show Less";
+    }else{
+      expanded.style.display="none";
+      btn.textContent="Read More";
+    }
   });
 });
 </script>
 
 </body>
 </html>
+
 
 
 
