--- a/index.html
+++ b/index.html
@@ -29,13 +29,35 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
+.sidebar h2 { 
+  color:#1976d2; 
+  margin-bottom:20px; 
+  font-size:1.6rem; 
+  border-bottom:2px solid #1976d2; 
+  padding-bottom:5px; 
+}
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
-.sidebar button { width:100%; padding:10px; margin-top:20px; border:none; border-radius:6px; background:#0d47a1; color:#fff; cursor:pointer; font-weight:bold; }
+.sidebar button { 
+  width:100%; 
+  padding:10px; 
+  margin-top:20px; 
+  border:none; 
+  border-radius:6px; 
+  background:#0d47a1; 
+  color:#fff; 
+  cursor:pointer; 
+  font-weight:bold;
+}
 
 /* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
+
+/* Header */
+header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
+header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
+header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
+header div p { font-size:1.2rem; color:#555; }
 
 /* Header */
 header {
@@ -70,12 +92,27 @@ header div p {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
+/* Responsive */
+@media(max-width:992px){
+  header { justify-content:center; text-align:center; padding:15px 20px; }
+  header div h1 { font-size:2.2rem; }
+  header div p { font-size:1.1rem; }
+  header img { height:120px; }
+}
+
 /* Sections */
 section { margin-bottom:50px; }
-section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
+section h2 { 
+  color: #1976d2; 
+  margin-bottom:20px; 
+  font-size:1.8rem; 
+  border-bottom: 2px solid #1976d2; 
+  display:inline-block; 
+  padding-bottom:4px; 
+}
 
-/* Boxes */
-.features { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
+/* Boxes with gradient hover */
+.features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .box {
   background: linear-gradient(145deg, #e3f2fd, #bbdefb);
   padding:20px;
@@ -93,26 +130,49 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
   background: linear-gradient(145deg, #bbdefb, #90caf9);
 }
-.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; text-align:center; 
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
+
+.box h3 { 
+  color:#0d47a1; 
+  margin-bottom:10px; 
+  font-size:1.2rem; 
+  transition: color 0.3s ease; 
+  text-align:center; 
+
+  display: -webkit-box;       /* دعم تقليدي لقص النص */
+  -webkit-line-clamp: 2;      /* الحد الأقصى: سطرين */
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis;     /* ... إذا تجاوز النص السطرين */
   word-break: break-word;
 }
+
+  
+.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; text-align:center; }
 .box:hover h3 { color:#0b3d91; }
 .box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; text-align:center; }
-button.readMoreBtn { padding:6px 12px; border:none; border-radius:5px; background:#1976d2; color:#fff; cursor:pointer; }
+iframe { width:100%; height:200px; border-radius:12px; object-fit:cover; }
 
-/* Expanded Section داخل كل صندوق */
-.expandedSection { 
-  display:none; 
-  margin-top:10px; 
-  background:#d0e8ff; 
-  padding:10px; 
-  border-radius:8px;
-  text-align:right;
+/* Footer */
+footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
+footer a { color:#1976d2; text-decoration:none; }
+
+/* Form */
+#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
+#videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
+#videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
+
+/* Delete button */
+.deleteBtn {
+  position:absolute;
+  top:10px;
+  right:10px;
+  background:red;
+  color:#fff;
+  border:none;
+  border-radius:5px;
+  padding:5px 8px;
+  cursor:pointer;
+  display:none;
 }
 
 /* Responsive */
@@ -135,6 +195,14 @@ button.readMoreBtn { padding:6px 12px; border:none; border-radius:5px; backgroun
   <a href="#resources">Resources</a>
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
+
+  <button id="showFormBtn">إضافة فيديو جديد</button>
+
+  <div id="videoForm">
+      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+      <input type="text" id="videoURL" placeholder="رابط YouTube">
+      <button id="addVideoBtn">إضافة الفيديو</button>
+  </div>
 </div>
 
 <main>
@@ -151,54 +219,49 @@ button.readMoreBtn { padding:6px 12px; border:none; border-radius:5px; backgroun
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
 </section>
 
-<!-- قسم Lessons مع الصناديق والاقسام الموسعة -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
-
-    <!-- صندوق 1 -->
     <div class="box">
       <h3>Everyday Conversations</h3>
-      <p>عبارتين فقط كمثال</p>
-      <button class="readMoreBtn">Read More</button>
-      <!-- القسم الموسع الخاص بهذا الصندوق فقط -->
-      <div class="expandedSection">
-        <p>عبارة موسعة 1</p>
-        <p>عبارة موسعة 2</p>
-        <p>عبارة موسعة 3</p>
-        <p>عبارة موسعة 4</p>
-      </div>
+      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
     </div>
-
-    <!-- صندوق 2 -->
     <div class="box">
       <h3>Egyptian Pronunciation</h3>
-      <p>عبارتين فقط كمثال</p>
-      <button class="readMoreBtn">Read More</button>
-      <!-- القسم الموسع الخاص بهذا الصندوق فقط -->
-      <div class="expandedSection">
-        <p>عبارة نطق موسعة 1</p>
-        <p>عبارة نطق موسعة 2</p>
-        <p>عبارة نطق موسعة 3</p>
-        <p>عبارة نطق موسعة 4</p>
-      </div>
+      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
     </div>
-
-    <!-- صندوق 3 -->
     <div class="box">
       <h3>Speak with Confidence</h3>
-      <p>عبارتين فقط كمثال</p>
-      <button class="readMoreBtn">Read More</button>
-      <!-- القسم الموسع الخاص بهذا الصندوق فقط -->
-      <div class="expandedSection">
-        <p>عبارة ثقة موسعة 1</p>
-        <p>عبارة ثقة موسعة 2</p>
-        <p>عبارة ثقة موسعة 3</p>
-        <p>عبارة ثقة موسعة 4</p>
-      </div>
+      <p>Stop translating in your head and start speaking naturally.</p>
     </div>
-
   </div>
+</section>
+
+<section id="videos">
+  <h2>Video Lessons</h2>
+  <div class="videos" id="videoList"></div>
+</section>
+
+<section id="resources">
+  <h2>Downloadable Resources</h2>
+  <div class="resources">
+    <div class="box">
+      <h3>PDF Lesson 1</h3>
+      <p>Download phrases and vocabulary for Lesson 1.</p>
+      <a class="button" href="lesson1.pdf" download>Download PDF</a>
+    </div>
+    <div class="box">
+      <h3>PDF Lesson 2</h3>
+      <p>Download phrases and vocabulary for Lesson 2.</p>
+      <a class="button" href="lesson2.pdf" download>Download PDF</a>
+    </div>
+  </div>
+</section>
+
+<section id="egyptian">
+  <h2>Why Egyptian Arabic?</h2>
+  <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
+  <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
 <section id="contact">
@@ -213,27 +276,83 @@ button.readMoreBtn { padding:6px 12px; border:none; border-radius:5px; backgroun
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- JS للتحكم في الأقسام الموسعة لكل صندوق -->
 <script>
-document.querySelectorAll('.readMoreBtn').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const parentBox = btn.closest('.box');        // الصندوق الحالي
-    const expanded = parentBox.querySelector('.expandedSection'); // القسم الموسع الخاص به
+const PASSWORD = "1234";
+let isAdmin = false;
 
-    // تبديل العرض للقسم الخاص بهذا الصندوق فقط
-    if(expanded.style.display === "none" || expanded.style.display === ""){
-      expanded.style.display = "block";  // إظهار القسم الموسع
-      btn.textContent = "Show Less";     // تغيير نص الزر
-    } else {
-      expanded.style.display = "none";   // إخفاء القسم الموسع
-      btn.textContent = "Read More";     // إعادة نص الزر
+const showFormBtn = document.getElementById('showFormBtn');
+const videoForm = document.getElementById('videoForm');
+const addVideoBtn = document.getElementById('addVideoBtn');
+const videoTitleInput = document.getElementById('videoTitle');
+const videoURLInput = document.getElementById('videoURL');
+const videoList = document.getElementById('videoList');
+
+let videos = JSON.parse(localStorage.getItem('videos')) || [];
+
+function createVideoElement(video) {
+  const box = document.createElement('div');
+  box.classList.add('box');
+  box.innerHTML = `
+    <h3>${video.title}</h3>
+    <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
+    <button class="deleteBtn">حذف الفيديو</button>
+  `;
+  const deleteBtn = box.querySelector('.deleteBtn');
+  if(isAdmin) deleteBtn.style.display = "block";
+  deleteBtn.addEventListener('click', () => {
+    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+      box.remove();
+      videos = videos.filter(v => v.id !== video.id);
+      localStorage.setItem('videos', JSON.stringify(videos));
     }
   });
+  videoList.appendChild(box);
+}
+
+videos.forEach(v => createVideoElement(v));
+
+showFormBtn.addEventListener('click', () => {
+  if(!isAdmin){
+    const pass = prompt("أدخل كلمة المرور:");
+    if(pass === PASSWORD){
+      videoForm.style.display = "flex";
+      isAdmin = true;
+      document.querySelectorAll('.deleteBtn').forEach(btn => btn.style.display = "block");
+    } else {
+      alert("كلمة المرور غير صحيحة!");
+    }
+  }
+});
+
+addVideoBtn.addEventListener('click', () => {
+  const title = videoTitleInput.value.trim();
+  const url = videoURLInput.value.trim();
+  if(!title || !url){ alert("يرجى إدخال عنوان الفيديو والرابط!"); return; }
+
+  let videoId = "";
+  if(url.includes("youtu.be/")) videoId = url.split("youtu.be/")[1].split("?")[0];
+  else if(url.includes("youtube.com/watch?v=")) videoId = url.split("v=")[1].split("&")[0];
+  else if(url.includes("youtube.com/shorts/")) videoId = url.split("shorts/")[1].split("?")[0];
+  else { alert("رابط YouTube غير صالح!"); return; }
+
+  const newVideo = { title, url, id: videoId };
+  videos.push(newVideo);
+  localStorage.setItem('videos', JSON.stringify(videos));
+
+  createVideoElement(newVideo);
+
+  videoTitleInput.value = "";
+  videoURLInput.value = "";
 });
 </script>
 
 </body>
 </html>
+
+
+
+
+
 
 
 
